log
Fri Apr 17 12:38:32 AM UTC 2026: 
 tests:  0|7
total_score: 0/60
e6b8c6b
Fri Apr 17 12:54:30 AM UTC 2026: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8d2c47d
Fri Apr 17 12:55:04 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9013e10
Fri Apr 17 01:12:03 AM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:56:30: error: statement with no effect [-Werror=unused-value]
   56 |             mapa->buckets[i] == NULL;
      |                              ^
cc1: all warnings being treated as errors
03461ea
Fri Apr 17 01:12:29 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
066f5d2
Fri Apr 17 01:30:58 AM UTC 2026: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
cc87378
Fri Apr 17 01:33:49 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e861728
Fri Apr 17 01:41:47 AM UTC 2026: 
 hashmap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 20/60
7fd53e6
Fri Apr 17 02:07:35 AM UTC 2026: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
9a48fd4
Fri Apr 17 02:13:54 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
db30f31
Fri Apr 17 02:25:56 AM UTC 2026: 
 hashmap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  8|3
total_score: 30/60
3e81357
Fri Apr 17 03:05:54 AM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
76e2907
Fri Apr 17 03:06:59 AM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 40/60
833fd60
Fri Apr 17 03:31:39 AM UTC 2026: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
17f25e0
Fri Apr 17 03:33:40 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:139:37: error: expected ‘;’ before numeric constant
  139 |     for(int i = 0; i < map->capacity 1; i++)
      |                                     ^~
      |                                     ;
014bc35
Fri Apr 17 03:36:33 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 40/60
cabd1ee
Fri Apr 17 03:36:56 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
f7a86c7
Fri Apr 17 03:41:22 AM UTC 2026: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 40/60
f6c024d
Fri Apr 17 03:42:59 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 50/60
a862804
Fri Apr 17 06:31:50 PM UTC 2026: 
 tests:  16|1
total_score: 50/60
25b9097
Sun Apr 19 03:45:27 PM UTC 2026: 
 tests:  16|1
total_score: 50/60
bfee187
Sun Apr 19 04:04:23 PM UTC 2026: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:184:41: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Wimplicit-function-declaration]
  184 |             if(arreglo_viejo[i] !=NULL) insert(map, arreglo_viejo->key, arreglo_viejo->value);
      |                                         ^~~~~~
      |                                         insertMap
hashmap.c:184:66: error: ‘arreglo_viejo’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  184 |             if(arreglo_viejo[i] !=NULL) insert(map, arreglo_viejo->key, arreglo_viejo->value);
      |                                                                  ^~
      |                                                     (*           )
hashmap.c:184:86: error: ‘arreglo_viejo’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  184 |             if(arreglo_viejo[i] !=NULL) insert(map, arreglo_viejo->key, arreglo_viejo->value);
      |                                                                                      ^~
      |                                                                         (*           )
5cab4b0
Sun Apr 19 04:04:41 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:184:69: error: ‘arreglo_viejo’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  184 |             if(arreglo_viejo[i] !=NULL) insertMap(map, arreglo_viejo->key, arreglo_viejo->value);
      |                                                                     ^~
      |                                                        (*           )
hashmap.c:184:89: error: ‘arreglo_viejo’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
  184 |             if(arreglo_viejo[i] !=NULL) insertMap(map, arreglo_viejo->key, arreglo_viejo->value);
      |                                                                                         ^~
      |                                                                            (*           )
d32d086
Sun Apr 19 04:05:16 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:177:27: error: initialization of ‘Pair *’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
  177 |     Pair* arreglo_viejo = map->buckets;
      |                           ^~~
hashmap.c:178:27: error: initialization of ‘Pair *’ from incompatible pointer type ‘Pair **’ [-Wincompatible-pointer-types]
  178 |     Pair* arreglo_nuevo = (Pair**)malloc(sizeof(Pair) * map->capacity * 2);
      |                           ^
hashmap.c:179:18: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
  179 |     map->buckets = arreglo_nuevo;
      |                  ^
hashmap.c:184:33: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
  184 |             if(arreglo_viejo[i] !=NULL) insertMap(map, arreglo_viejo->key, arreglo_viejo->value);
      |                ~~~~~~~~~~~~~~~~ ^~
      |                             |
      |                             Pair
ae412e3
Sun Apr 19 04:06:14 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 50/60
cb08ec5
Sun Apr 19 04:21:01 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘enlarge’:
hashmap.c:184:75: error: invalid type argument of ‘->’ (have ‘Pair’)
  184 |             if(arreglo_viejo[i] !=NULL) insertMap(map, (*arreglo_viejo)[i]->key, (*arreglo_viejo)[i]->value);
      |                                                                           ^~
hashmap.c:184:101: error: invalid type argument of ‘->’ (have ‘Pair’)
  184 |             if(arreglo_viejo[i] !=NULL) insertMap(map, (*arreglo_viejo)[i]->key, (*arreglo_viejo)[i]->value);
      |                                                                                                     ^~
7eb245a
